--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.rudy</groupId>
-    <artifactId>customcrops</artifactId>
-    <version>1.0</version>
+    <artifactId>xCustomcrops</artifactId>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>customcrops</name>
